--- a/设计模式笔记.md
+++ b/设计模式笔记.md
@@ -30,3 +30,28 @@
 - 在学习每一个设计模式时至少应该掌握如下几点：这个设计模式的意图是什么，它要解决一个什么问题，什么时候可以使用它；它是如何解决的，掌握它的结构图，记住它的关键代码；能够想到至少两个它的应用实例，一个生活中的，一个软件中的；这个模式的优缺点是什么，在使用时要注意什么。
 - **少说多做。**
 - 设计模式的“上乘”境界：“手中无模式，心中有模式”。
+
+#### 面向对象设计原则
+
+##### 概述
+
+- 如何同时提高一个软件系统的可维护性和可复用性是面向对象设计需要解决的核心问题之一。
+- 面向对象设计原则为支持可维护性复用而诞生，这些原则蕴含在很多设计模式🀄️，它们是从许多设计方案🀄️总结出的指导性原则。
+
+##### 单一职责原则
+
+- ```
+  单一职责原则（Single Responsibility Principle，SRP）：一个类只负责一个功能领域中的相应职责，或者可以定义为：就一个类而言，应该只有一个引起它变化的原因。
+  ```
+
+- 单一职责原则是实现高内聚、低耦合的指导方针，它是最简单但又最难运用的原则。
+
+##### 开闭原则
+
+- ```
+  开闭原则（Open-Closed Principle，OCP）：一个软件实体应当对扩展开放，对修改关闭。即软件实体应尽量在不修改原有代码的情况下进行扩展。
+  ```
+
+- 在开闭原则的定义🀄️，软件实体可以🈯️一个软件模块、一个由多个类组成的局部结构或一个独立的类。
+
+- 抽象化是开闭原则的关键。
