--- a/设计模式笔记.md
+++ b/设计模式笔记.md
@@ -10,7 +10,7 @@
 
 ##### 设计模式概述（二）
 
-- 设计模式的一版定义：
+- 设计模式的一般定义：
 
   ```
   设计模式（Design Pattern）是一套被反复使用、多数人知晓的、经过分类编目的、代码设计经验的总结，使用设计模式是为了可重用代码、让代码更容易被他人理解并且保证代码可靠性。
@@ -18,10 +18,10 @@
 
 - 设计模式的关键要素是模式名称、问题、解决方案和效果
 
-  - **模式名称（Pattern Name）**通过一两个词来描述模式的问题、解决方案和效果，以便更好地理解模式并方便开发人员之间的交流，绝大多数模式都是根据其功能或模式结构来命名的；
-  - **问题（Problem）**描述了应该在何时使用模式，它包含了设计🀄️存在的问题以及问题存在的原因；
-  - **解决方案（Solution）**描述了一个设计模式的组成成分，以及这些组成成分之间的相互关系，各自的职责和协作方式，通常解决方案通过 UML 类图和核心代码来进行描述；
-  - **效果（Consequences）**描述了模式的优缺点以及在使用模式时应权衡的问题。
+  - **模式名称（Pattern Name）** 通过一两个词来描述模式的问题、解决方案和效果，以便更好地理解模式并方便开发人员之间的交流，绝大多数模式都是根据其功能或模式结构来命名的；
+  - **问题（Problem）** 描述了应该在何时使用模式，它包含了设计🀄️存在的问题以及问题存在的原因；
+  - **解决方案（Solution）** 描述了一个设计模式的组成成分，以及这些组成成分之间的相互关系，各自的职责和协作方式，通常解决方案通过 UML 类图和核心代码来进行描述；
+  - **效果（Consequences）** 描述了模式的优缺点以及在使用模式时应权衡的问题。
 
 - 创建型模式主要用于描述如何创建对象，结构型模式主要用于描述如何实现类或对象的组合，行为型模式主要用于描述类或对象怎样交互以及怎样分配职责。
 
