--- a/设计模式笔记.md
+++ b/设计模式笔记.md
@@ -55,3 +55,15 @@
 - 在开闭原则的定义🀄️，软件实体可以🈯️一个软件模块、一个由多个类组成的局部结构或一个独立的类。
 
 - 抽象化是开闭原则的关键。
+
+##### 里氏代换原则
+
+- ```
+  里氏代换原则（Liskov Substitution Principle，LSP）：所有引用基类（父类）的地方必须能透明地使用其子类的对象。
+  ```
+
+- 在软件🀄️将一个基类对象替换成它的子类对象，程序将不会产生任何错误和异常，反过来则不成立，如果一个软件实体使用的是一个子类对象的话，那么它不一定能够使用基类对象。
+
+- 在程序🀄️尽量使用基类类型来对对象进行定义，而在运行时再确定其子类类型，用子类对象来替换父类对象。
+
+- 里氏代换原则是实现开闭原则的重要方式之一。
