--- a/设计模式笔记.md
+++ b/设计模式笔记.md
@@ -67,3 +67,51 @@
 - 在程序🀄️尽量使用基类类型来对对象进行定义，而在运行时再确定其子类类型，用子类对象来替换父类对象。
 
 - 里氏代换原则是实现开闭原则的重要方式之一。
+
+##### 依赖倒转原则
+
+- ```
+  依赖倒转原则（Dependency Inversion Principle，DIP）：抽象不应该依赖于细节，细节应当依赖于抽象。换言之，要针对街口编程，而不是针对实现编程。
+  ```
+
+- 依赖倒转原则要求我们正程序代码🀄️传递参数时或在关联关系🀄️，尽量引用层次高的抽象层类，即使用接口和抽象类进行变量类型声明、参数类型声明、方法返回类型声明，以及数据类型的转换等，而不要用具体类来做这些事情。
+
+- 依赖注入是🈯️当一个对象要与其他对象发生依赖关系时，通过抽象来注入所依赖的对象。
+
+- 构造注入，设值注入（Setter 注入）和 接口注入
+
+##### 接口隔离原则
+
+- ```
+  接口隔离原则（Interface Segregation Principle，ISP）：使用多个专门的接口，而不使用单一的总接口，即客户端不应该依赖那些它不需要的接口。
+  ```
+
+- 每一个接口应该承担一种相对独立的角色，不干不该干的事，该干的事都要干。
+
+- ISP：接口仅仅提供客户端需要的行为，客户端不需要的行为则隐藏起来，应当为客户端提供尽可能小的单独的接口，而不要提供大的总接口。
+
+- 在使用接口隔离原则时，我们需要注意控制接口的粒度，接口不能太小，如果太小会导致系统🀄️接口泛滥，不利于维护；接口也不能太大，太大的接口将违背接口隔离原则，灵活性较差，使用起来很不方便。
+
+##### 合成复用原则
+
+- ```
+  合成复用原则（Composite Reuse Principle，CRP）：尽量使用对象组合，而不是继承来达到复用的目的。
+  ```
+
+- 复用时尽量使用组合／聚合关系（关联关系），少用继承。
+
+- 需要慎重使用继承复用。
+
+- 一般而言，如果两个类之间是 “Has-A” 的关系应使用组合或聚合，如果是 “Is-A” 关系可使用继承。
+
+##### 迪米特法则
+
+- ```
+  迪米特法则（Law of Demeter，LoD）：一个软件实体应当尽可能少地与其他实体发生相互作用。
+  ```
+
+- 迪米特法则🉑️降低系统的耦合度，使类与类之间保持松散的耦合关系。
+
+- 在设计系统时，应该尽量减少对象之间的交互，如果两个对象之间不必彼此直接通信，那么这两个对象就不应当发生任何直接的相互作用，如果其中的一个对象需要调用另一个对象的某一个方法等话，可以通过第三者转发这个调用。简而言之，就是通过引入一个合理的第三者来降低现有对象之间的耦合度。
+
+- 在类的划分上，应当尽量创建松耦合的类，类之间的耦合度越低，就越有利于复用，一个处在松耦合🀄️的类一旦被修改，不会对关联的类造成太大波及；在类的结构设计上，每一个类都应当尽量降低其成员变量和成员函数的访问权限；在类的设计上，只要有可能，一个类应当设计成不变类；在对其他类的引用上，一个对象对其他对象的引用应当将到最低。
