--- a/收藏的句子.md
+++ b/收藏的句子.md
@@ -1,6 +1,12 @@
+# 收藏的句子
+
 ##### 1
 
 每个老实男人，基本上都这样想过“如果那个女孩喜欢我，我会对她很好很好。绝不辜负。”心中藏好一份礼物，叫做真心。
 然而没有一个好姑娘要打开它。真心慢慢变质，开始怀疑自己。这样的幻想，是否太过幼稚？
 于是打碎幻想，决定做个坏男人。
 做出这个打算的人，在心中，一定有些东西，被糟蹋了。
+
+##### 2
+
+外表和形式不重要，我把所有美好都献给了自己制造的世界。
