数据库笔记

--- a/常用数据库语句.md
+++ b/常用数据库语句.md
@@ -63,6 +63,40 @@ ALTER {DATABASE | SCHEMA} [db_name] [DEFAULT] CHARACTER SET [=] charset_name
 删除数据库
 DROP {DATABASE | SCHEMA} [IF EXISTS] db_name
 
+行 称为记录 row
+列 称为字段 col
+
+打开数据库
+USE 数据库名称；
+
+创建数据表
+CREATE TABLE [IF NOT EXISTS] table_name (
+	column_name data_type,
+	...
+)
+
+查看数据库列表
+SHOW TABLES [FROM db_name] [LIKE 'pattern' | WHERE expr]
+
+查看数据表结构
+SHOW COLUMNS FROM tb1_name;
+
+插入记录
+INSERT [INTO] tbl_name [(col_name,...)] VALUES(val,...)
+
+记录查找
+SELECT expr,... FROM tb1_name;
+eg.SELECT * FROM tb1;
+
+AUTO_INCREMENT
+自动编号，且必须与主键组合使用
+默认情况下，起始值为 1，每次的增量为 1
+
+PRIMARY KEY
+主键约束
+每张数据表只能存在一个主键
+主键保证记录的唯一性
+主键自动为 NOT NULL
 
 ```
 
